--- a/00-任务拆分.md
+++ b/00-任务拆分.md
@@ -1,8 +1,36 @@
 ## 今日TODO:
 1. 按照目录梳理具体包含的内容
-2. 对具体关键词, 编写 简单解释 文档
+2. 对依赖库的作用编写作用和解释
+3. 对具体关键词, 编写 简单解释 文档
 
 ## 目的:
 从零开始构建嵌入式 linux 系统, 剖析芯片从**上电**开始执行**第一条指令**到整个系统运行, **相关应用服务启动**.
 
 ## 任务拆分
+[] 搭建 qemu 环境, 后续使用 nix-shell 批量构建开发环境(TODO)
+
+[] 添加仿真板, 理解 qemu 程序执行流 包括新添加的仿真板的注册以及初始化, QOM 相关(TODO) qemu/KVM 源码解析
+
+[] 添加中断控制器, 串口, pflash (并行flash)支持.
+
+[] 制作测试固件, 测试串口输出
+
+[] 设备文件树 与 opensbi 加载运行(FDT扁平设备树 powerpc 架构, 驱动抽象分装, 驱动框架 解耦, lowlevelboot)(TODO)
+
+[] OpenSBI Domain(权限划分 权限区域)
+
+[] U-Boot 移植 (bootloader(loader & boot)) spl功能 bl0 bl1, xip 模式, Uboot代码流程
+
+[] U-Boot 移植 platform 添加与内存分配重划分 (固件升级)
+
+[] 为 kernel 启动添加虚拟化的硬件基础 qemu virtio(文件系统块设备)与fw_cfg(参数传递) (半虚拟化Hypervisor)
+
+[] linux kernel 加载引导(boot, 驱动, 文件系统初始化)
+
+[] linux kernel 第一个用户态程序 (创建页表, 虚拟地址运行, 设置异常与中断处理程序, RV MMU)
+
+[] busybox libc库支持
+
+[] 最小根文件系统 用户级别初始化内容 进入 shell
+
+[] 动态链接 elf文件加载 (静态编译, 动态编译 将应用程序与C库分离)
