:memo: 23.02.22 关键词扫盲

--- a/00-任务拆分.md
+++ b/00-任务拆分.md
@@ -15,7 +15,9 @@
 
 [] 制作测试固件, 测试串口输出
 
-[] 设备文件树 与 opensbi 加载运行(FDT扁平设备树 powerpc 架构, 驱动抽象分装, 驱动框架 解耦, lowlevelboot)(TODO)
+[] 多级BootLoader
+
+[] 设备文件树 与 opensbi 加载运行(FDT扁平设备树 源于linux内核powerpc架构驱动抽象分装, 驱动框架 解耦, lowlevelboot)(TODO)
 
 [] OpenSBI Domain(权限划分 权限区域)
 
