--- a/00-任务拆分.md
+++ b/00-任务拆分.md
@@ -1,17 +1,19 @@
 ## 今日TODO:
-1. 学习 QEMU 中 RISC-V Soc 的新增与实现 视频， 做简要记录
+1. 完成前4章节细节记录
+2. 复现ch5-6
+3. 学习 QEMU 中 RISC-V Soc 的新增与实现 视频， 做简要记录
 
 ## 目的:
 从零开始构建嵌入式 linux 系统, 剖析芯片从**上电**开始执行**第一条指令**到整个系统运行, **相关应用服务启动**.
 
 ## 任务拆分
-[] 搭建 qemu 环境, 后续使用 nix-shell 批量构建开发环境(TODO)
+[*] 搭建 qemu 环境, 后续使用 nix-shell 批量构建开发环境(TODO)
 
-[] 添加仿真板, 理解 qemu 程序执行流 包括新添加的仿真板的注册以及初始化, QOM 相关(TODO) qemu/KVM 源码解析
+[*] 添加仿真板, 理解 qemu 程序执行流 包括新添加的仿真板的注册以及初始化, QOM 相关(TODO) qemu/KVM 源码解析
 
-[] 添加中断控制器, 串口, pflash (并行flash)支持.
+[*] 添加中断控制器, 串口, pflash (并行flash)支持.
 
-[] 制作测试固件, 测试串口输出
+[*] 制作测试固件, 测试串口输出
 
 [] 多级BootLoader
 
