--- a/00-任务拆分.md
+++ b/00-任务拆分.md
@@ -1,5 +1,6 @@
 ## 今日TODO:
 1. 完成前7章节细节记录
+2. 复现 ch8&9
 3. 学习 QEMU 中 RISC-V Soc 的新增与实现 视频， 做简要记录
 
 ## 目的:
@@ -14,11 +15,11 @@
 
 [*] 制作测试固件, 测试串口输出
 
-[] 多级BootLoader
+[*] 多级BootLoader
 
-[] 设备文件树 与 opensbi 加载运行(FDT扁平设备树 源于linux内核powerpc架构驱动抽象分装, 驱动框架 解耦, lowlevelboot)(TODO)
+[*] 设备文件树 与 opensbi 加载运行(FDT扁平设备树 源于linux内核powerpc架构驱动抽象分装, 驱动框架 解耦, lowlevelboot)(TODO)
 
-[] OpenSBI Domain(权限划分 权限区域)
+[*] OpenSBI Domain(权限划分 权限区域)
 
 [] U-Boot 移植 (bootloader(loader & boot)) spl功能 bl0 bl1, xip 模式, Uboot代码流程
 
