--- a/00-任务拆分.md
+++ b/00-任务拆分.md
@@ -21,9 +21,9 @@
 
 [*] OpenSBI Domain(权限划分 权限区域)
 
-[] U-Boot 移植 (bootloader(loader & boot)) spl功能 bl0 bl1, xip 模式, Uboot代码流程
+[*] U-Boot 移植 (bootloader(loader & boot)) spl功能 bl0 bl1, xip 模式, Uboot代码流程
 
-[] U-Boot 移植 platform 添加与内存分配重划分 (固件升级)
+[*] U-Boot 移植 platform 添加与内存分配重划分 (固件升级)
 
 [] 为 kernel 启动添加虚拟化的硬件基础 qemu virtio(文件系统块设备)与fw_cfg(参数传递) (半虚拟化Hypervisor)
 
