:memo: 23.3.1 start kernel

--- a/00-任务拆分.md
+++ b/00-任务拆分.md
@@ -1,7 +1,5 @@
 ## 今日TODO:
-1. 完成前7章节细节记录
-2. 复现 ch8&9
-3. 学习 QEMU 中 RISC-V Soc 的新增与实现 视频， 做简要记录
+1. 学习 QEMU 中 RISC-V Soc 的新增与实现 视频， 做简要记录
 
 ## 目的:
 从零开始构建嵌入式 linux 系统, 剖析芯片从**上电**开始执行**第一条指令**到整个系统运行, **相关应用服务启动**.
@@ -25,9 +23,9 @@
 
 [*] U-Boot 移植 platform 添加与内存分配重划分 (固件升级)
 
-[] 为 kernel 启动添加虚拟化的硬件基础 qemu virtio(文件系统块设备)与fw_cfg(参数传递) (半虚拟化Hypervisor)
+[*] 为 kernel 启动添加虚拟化的硬件基础 qemu virtio(文件系统块设备)与fw_cfg(参数传递) (半虚拟化Hypervisor)
 
-[] linux kernel 加载引导(boot, 驱动, 文件系统初始化)
+[*] linux kernel 加载引导(boot, 驱动, 文件系统初始化)
 
 [] linux kernel 第一个用户态程序 (创建页表, 虚拟地址运行, 设置异常与中断处理程序, RV MMU)
 
