:memo: 23.3.3 复现 ch12&13&14

--- a/00-任务拆分.md
+++ b/00-任务拆分.md
@@ -27,10 +27,10 @@
 
 [*] linux kernel 加载引导(boot, 驱动, 文件系统初始化)
 
-[] linux kernel 第一个用户态程序 (创建页表, 虚拟地址运行, 设置异常与中断处理程序, RV MMU)
+[*] linux kernel 第一个用户态程序 (创建页表, 虚拟地址运行, 设置异常与中断处理程序, RV MMU)
 
-[] busybox libc库支持
+[*] busybox libc库支持
 
-[] 最小根文件系统 用户级别初始化内容 进入 shell
+[*] 最小根文件系统 用户级别初始化内容 进入 shell
 
-[] 动态链接 elf文件加载 (静态编译, 动态编译 将应用程序与C库分离)
+[*] 动态链接 elf文件加载 (静态编译, 动态编译 将应用程序与C库分离)
